# Bank-Customer-Segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: Home.py  utils.py
app/pages/: 1_Overview.py  2_SQL_Analytics.py  3_Customer_Segments.py  4_Statistical_Analysis.py  5_Business_Insights.py  6_Downloads.py
data/processed/: data_quality_report.csv  preparation_summary.json
scripts/: build_database.py  prepare_data.py  run_analysis.py  run_statistical_analysis.py
sql/: analysis_queries.sql  create_schema.sql  create_views.sql
src/bank_customer_segmentation/: __init__.py  analysis.py  clustering.py  config.py  dashboard.py  data.py  database.py  features.py  statistics.py  utils.py  validation.py
src/bank_customer_segmentation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_analysis.py  test_clustering.py  test_dashboard.py  test_data.py  test_database.py  test_features.py  test_statistics.py  test_validation.py
