[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-customer-segmentation"
version = "0.3.0"
description = "End-to-end bank customer analytics and segmentation project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "scikit-learn>=1.5,<2.0",
    "scipy>=1.13,<2.0",
    "joblib>=1.4,<2.0",
    "matplotlib>=3.9,<4.0",
    "streamlit>=1.42,<2.0",
    "plotly>=5.24,<7.0",
    "altair>=5.4,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
